src/test/jenkins/job/shouldFail/forEach.jenkins
node() {
    stage('List') {
        hello()
    }
}

void hello() {
    [1, 2, 3].each{ println it }
}